<resources>
    <string name="app_name"> PichangaApp</string>
    <string name="widget">widget</string>
    <string name="result_value">0 - 1</string>
    <string name="chile">CHILE</string>
    <string name="v_s">V/S</string>
    <string name="chelse">CHELSE</string>
    <string name="aplication_name">PichangApp</string>
    <string name="search_add_match"><![CDATA[Search&add play]]></string>
    <string name="organized_matches">organized matches</string>
    <string name="matches_to_participate">maches to participate</string>
    <string name="match_finished">match finished</string>
    <string name="text_day">Fecha:</string>
    <string name="text_day_match">10/09/2022</string>
    <string name="text_hour_match">20:00</string>
    <string name="text_location_match">Bernardo Larrain 11822</string>
    <string name="text_description">Descripción:</string>
    <string name="text_description_match">El partido se desarollara en la cancha 1 de la zona.Los colores de las poleras seran de color rojo y negro.</string>
    <string name="text_hour">Hora:</string>
    <string name="text_location">Lugar:</string>
    <string name="filter">Filter</string>
    <string name="result_match">0 - 1</string>
    <string name="login">Login</string>
    <string name="mock_password">***********</string>
    <string name="example_mail">example@example.com</string>
    <string name="password">Password</string>
    <string name="retrieve_password">Recuperar Contraseña</string>
    <string name="mail">Mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="registrate">Registrate</string>
    <string name="registro">Registro</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirma_contrase_a">Confirma Contraseña</string>
    <string name="register_next_page">Register Next Page</string>
    <string name="dot">.</string>
    <string name="filtrar">FILTRAR</string>
    <string name="con_equipo">Con equipo:</string>
    <string name="yes">SI</string>
    <string name="profile">Profile</string>
    <string name="nombre_equipo">Nombre Equipo</string>
    <string name="mail_de_equipo">Mail de Equipo</string>
    <string name="categoria_de_equipo">Categoria de Equipo</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_icon_for_profile">Profile icon for profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha">Fecha</string>
    <string name="lugar">Lugar</string>
    <string name="hora">Hora</string>
    <string name="descripcion">Descripcion</string>
    <string name="nav_organize">Organize</string>
    <string name="nav_home">Home</string>
    <string name="nav_to_play">To play</string>
    <string name="nav_finished">Finished</string>
    <string name="rival_chelse">Chelse</string>
    <string name="proximas">PROXIMAS</string>
    <string name="prox_semana">PROX SEMANA</string>
    <string name="esta_semana">ESTA SEMANA</string>
    <string name="until">Hasta:</string>
    <string name="from">Desde:</string>
    <string name="result">Resultado:</string>
    <string name="wins">ganados</string>
    <string name="nombre_de_equipo">Nombre de Equipo</string>
    <string name="categor_a">Categoría</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="line">-</string>
    <string name="femenino">Femenino</string>
    <string name="team_fc">Team FC</string>
    <string name="nombre_de_ususario">Nombre de Usuario</string>
    <string name="username">Username</string>
    <string name="mail_de_usuario">Mail de Usuario</string>
    <string name="games">Games</string>
    <string name="add_friends">Add Friends</string>
    <string name="requests">Requests</string>
    <string name="friends">Friends</string>
    <string-array name="points">
        <item>Empatadas</item>
        <item>Ganadas</item>
        <item>Perdidas</item>
    </string-array>
</resources>