<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:layout_marginBottom="30sp">

    <RelativeLayout
        android:id="@+id/expandLayout"
        android:layout_width="371dp"
        android:layout_height="556dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImageTeam1"
            android:layout_width="80sp"
            android:layout_height="70sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15dp"
            android:src="@drawable/extra_logo_chile" />


        <EditText
            android:id="@+id/resultEquip1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="105sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="5sp"
            android:ems="10"
            android:hint="?"
            android:inputType="number"
            android:minHeight="50dp"
            android:textAlignment="center"
            android:textColorHint="#00897B"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <TextView

            android:id="@+id/line"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="5sp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="@string/line"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/resultEquip2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="197sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="5sp"
            android:ems="10"
            android:hint="?"
            android:inputType="number"
            android:minHeight="50dp"
            android:textAlignment="center"
            android:textColorHint="#00897B"
            android:textSize="50sp"
            android:textStyle="bold"
            android:autofillHints="" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImageTeam2"
            android:layout_width="80sp"
            android:layout_height="70sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:src="@drawable/extra_logo_chelsea" />


        <TextView
            android:id="@+id/NameTeam1"
            android:layout_width="140sp"
            android:layout_height="50sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="100sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="262sp"
            android:gravity="center"
            android:text="@string/chile"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textVs"
            android:layout_width="40sp"
            android:layout_height="50sp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="100sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="262sp"
            android:gravity="center"
            android:text="@string/v_s"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/NameTeam2"
            android:layout_width="140sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="262sp"
            android:gravity="center"
            android:text="@string/chelse"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textDay"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_day"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DayOfMatch"
            android:layout_width="400sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90sp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_day_match"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textHour"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_hour"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/HourOfMatch"
            android:layout_width="400sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90sp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_hour_match"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_location"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LocationOfMatch"
            android:layout_width="400sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90sp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_location_match"
            android:textSize="20sp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="331dp"
            android:layout_height="78dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="268dp"
            android:layout_marginEnd="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="348dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DescriptionOfMatch"
            android:layout_width="350sp"
            android:layout_height="100sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="377dp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="15sp"
            android:text="@string/text_description_match"
            android:textSize="20sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>