<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:layout_marginBottom="30sp">

    <RelativeLayout
        android:id="@+id/expandLayout"
        android:layout_width="371dp"
        android:layout_height="556dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImageTeam1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/extra_logo_chelsea" />

        <Button
            android:id="@+id/RivalInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10sp"
            android:background="#00000000"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/NameTeam1"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="100sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="262sp"
            android:gravity="center"
            android:text="@string/rival_chelse"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textDay"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="153dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_day"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DataDatePlayMatch"
            android:layout_width="400sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90sp"
            android:layout_marginTop="153dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_day_match"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textHour"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="183dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_hour"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/HourOfMatch"
            android:layout_width="400sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90sp"
            android:layout_marginTop="183dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_hour_match"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="70sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="213dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_location"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LocationOfMatch"
            android:layout_width="400sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90sp"
            android:layout_marginTop="213dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_location_match"
            android:textSize="20sp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="331dp"
            android:layout_height="78dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="247dp"
            android:layout_marginEnd="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="20sp"
            android:text="@string/text_description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DescriptionOfMatch"
            android:layout_width="350sp"
            android:layout_height="100sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="361dp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="15sp"
            android:text="@string/text_description_match"
            android:textSize="20sp" />

        <Button
            android:id="@+id/AddInMatchButton"
            android:layout_width="64sp"
            android:layout_height="56sp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="470sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/ic_trash"
            android:textSize="20sp"
            app:backgroundTint="@null"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>